Make it possible to run coveralls at gfw and common-lib #508

--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,6 @@
     </organization>
     <modules>
         <module>terasoluna-gfw-common-libraries</module>
-        <module>terasoluna-gfw-dependencies</module>
     </modules>
     <repositories>
         <repository>
@@ -98,6 +97,11 @@
                         <skip>true</skip>
                     </configuration>
                 </plugin>
+                <plugin>
+                    <groupId>org.eluder.coveralls</groupId>
+                    <artifactId>coveralls-maven-plugin</artifactId>
+                    <version>${coveralls-maven-plugin.version}</version>
+                </plugin>
             </plugins>
         </pluginManagement>
     </build>
@@ -106,6 +110,7 @@
         <jacoco-maven-plugin.version>0.7.5.201505241946</jacoco-maven-plugin.version>
         <formatter-maven-plugin.version>0.5.2</formatter-maven-plugin.version>
         <com.google.code.maven-license-plugin.version>1.4.0</com.google.code.maven-license-plugin.version>
+        <coveralls-maven-plugin.version>4.1.0</coveralls-maven-plugin.version>
         <!-- == Other Properties== -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
