--- a/terasoluna-gfw-dependencies/terasoluna-gfw-mybatis3-dependencies/pom.xml
+++ b/terasoluna-gfw-dependencies/terasoluna-gfw-mybatis3-dependencies/pom.xml
@@ -22,6 +22,10 @@
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis-spring</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis-typehandlers-jsr310</artifactId>
+        </dependency>
         <!-- == End MyBatis == -->
     </dependencies>
 </project>
