--- a/terasoluna-gfw-dependencies/terasoluna-gfw-common-dependencies/pom.xml
+++ b/terasoluna-gfw-dependencies/terasoluna-gfw-common-dependencies/pom.xml
@@ -25,6 +25,10 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+        </dependency>
         <!-- == End Jackson == -->
 
         <!-- == Begin Logging == -->
