add new comments to categorize properties #508

--- a/pom.xml
+++ b/pom.xml
@@ -129,12 +129,12 @@
         </pluginManagement>
     </build>
     <properties>
-        <!-- == Maven Plugins == -->
+        <!-- == Maven Plugin Versions == -->
         <jacoco-maven-plugin.version>0.7.5.201505241946</jacoco-maven-plugin.version>
         <formatter-maven-plugin.version>0.5.2</formatter-maven-plugin.version>
         <com.google.code.maven-license-plugin.version>1.4.0</com.google.code.maven-license-plugin.version>
         <coveralls-maven-plugin.version>4.1.0</coveralls-maven-plugin.version>
-        <!-- == Other Properties== -->
+        <!-- == Project Properties == -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 </project>
