--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,5 @@ cache:
 install: true
 
 script:
-  - ./mvn-build-all.sh clean install jacoco:report
-  - mvn -U coveralls:report
+  - mvn -U clean install jacoco:report
+  - mvn -U -P common-libs-only coveralls:report
