--- a/terasoluna-gfw-recommended-web-dependencies/pom.xml
+++ b/terasoluna-gfw-recommended-web-dependencies/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>terasoluna-gfw-parent</artifactId>
         <groupId>org.terasoluna.gfw</groupId>
-        <version>5.1.1-SNAPSHOT</version>
+        <version>5.1.1.RELEASE</version>
         <relativePath>../terasoluna-gfw-parent/pom.xml</relativePath>
     </parent>
     <artifactId>terasoluna-gfw-recommended-web-dependencies</artifactId>
