--- a/terasoluna-gfw-common-libraries/terasoluna-gfw-string/pom.xml
+++ b/terasoluna-gfw-common-libraries/terasoluna-gfw-string/pom.xml
@@ -53,6 +53,11 @@
             <plugin>
                 <groupId>net.revelc.code</groupId>
                 <artifactId>formatter-maven-plugin</artifactId>
+                <configuration>
+                    <excludes>
+                        <exclude>org/terasoluna/gfw/common/fullhalf/DefaultFullHalf.java</exclude>
+                    </excludes>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>com.google.code.maven-license-plugin</groupId>
