--- a/terasoluna-gfw-string/pom.xml
+++ b/terasoluna-gfw-string/pom.xml
@@ -53,6 +53,15 @@
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>net.revelc.code</groupId>
+                <artifactId>formatter-maven-plugin</artifactId>
+                <configuration>
+                    <excludes>
+                        <exclude>org/terasoluna/gfw/common/fullhalf/DefaultFullHalf.java</exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
     <dependencies>
