Applyed Java code format check #680

--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
     <properties>
         <!-- == Maven Plugin Versions == -->
         <jacoco-maven-plugin.version>0.7.5.201505241946</jacoco-maven-plugin.version>
-        <formatter-maven-plugin.version>0.5.2</formatter-maven-plugin.version>
+        <formatter-maven-plugin.version>2.0.1</formatter-maven-plugin.version>
         <com.google.code.maven-license-plugin.version>1.4.0</com.google.code.maven-license-plugin.version>
         <coveralls-maven-plugin.version>4.1.0</coveralls-maven-plugin.version>
         <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
@@ -58,7 +58,7 @@
         </profile>
         <profile>
             <id>central</id>
-            <!-- for release to Maven Central Repository-->
+            <!-- for release to Maven Central Repository -->
             <modules>
                 <module>terasoluna-gfw-parent</module>
                 <module>terasoluna-gfw-common-libraries</module>
@@ -137,7 +137,7 @@
                             <version>${com.google.code.maven-license-plugin.version}</version>
                         </plugin>
                         <plugin>
-                            <groupId>net.revelc.code</groupId>
+                            <groupId>net.revelc.code.formatter</groupId>
                             <artifactId>formatter-maven-plugin</artifactId>
                             <version>${formatter-maven-plugin.version}</version>
                             <configuration>
