--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,6 @@ install: true
 
 script:
   - mvn xml:check-format
-  - mvn formatter:validate
+  - mvn formatter:validate -P common-libs
   - mvn -U clean install
   - mvn -U -P common-libs jacoco:report coveralls:report
