Excluded target directory from format check #680

--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,7 @@
                 </includes>
                 <excludes>
                   <exclude>**/.*</exclude>
+                  <exclude>**/target/**</exclude>
                 </excludes>
               </formatFileSet>
             </formatFileSets>
