--- a/pom.xml
+++ b/pom.xml
@@ -172,7 +172,9 @@
                 <configFile>${project.basedir}/eclipse/formatter.xml
                 </configFile>
                 <lineEnding>CRLF</lineEnding>
-                <sourceDirectory>${project.basedir}</sourceDirectory>
+                <directories>
+                  <directory>${project.basedir}</directory>
+                </directories>
                 <excludes>
                   <exclude>terasoluna-gfw-common-libraries/terasoluna-gfw-string/src/main/java/org/terasoluna/gfw/common/fullhalf/DefaultFullHalf.java</exclude>
                 </excludes>
