improvement formatter-maven-plugin at terasoluna-gfw-common-libraries #680

--- a/terasoluna-gfw-common-libraries/pom.xml
+++ b/terasoluna-gfw-common-libraries/pom.xml
@@ -95,6 +95,16 @@
             <configFile>${project.root.basedir}/../eclipse/formatter.xml
             </configFile>
             <lineEnding>CRLF</lineEnding>
+            <directories>
+              <directory>${project.basedir}</directory>
+            </directories>
+            <includes>
+              <include>**/src/main/java/**/*.java</include>
+              <include>**/src/test/java/**/*.java</include>
+            </includes>
+            <excludes>
+              <exclude>terasoluna-gfw-string/src/main/java/org/terasoluna/gfw/common/fullhalf/DefaultFullHalf.java</exclude>
+            </excludes>
           </configuration>
         </plugin>
         <plugin>
